# xlsxreport

./: .gitignore  CHANGELOG.md  CHANGELOG.txt  CONFIG_FILE_DOCUMENTATION.rst  DOCUMENTATION.md  README.md  README.rst  README.txt  mkdocs.yml  noxfile.py  pyproject.toml  setup.py
.github/workflows/: run-pytest.yml
docs/: reference.md
docs/source/: conf.py
examples/: proteinGroups.txt
source/: modules.rst  xlsxreport.scripts.rst
tests/: test_appdir.py  test_compiler.py  test_config.py  test_integration.py  test_template.py  test_writer.py
tests/test_validate/: test_validate_formats.py  test_validate_main_sections.py  test_validate_settings.py  test_validate_template_content.py  test_validate_template_integrity.py  test_validate_template_types.py
tests/testdata/: mq_proteinGroups.xlsx  mq_protein_config.yaml  mq_protein_template.yaml
xlsxreport/: .apply_new_writer.py  __init__.py  appdir.py  builder.py  compiler.py  config.py  excel_writer.py  schemas.py  section.py  settings.py  template.py  validate.py  writer.py
xlsxreport/default_config/: cassiopeia.yaml  config.yaml  fragpipe.yaml  maxquant.yaml  msreport_lfq_protein.yaml  qtable_proteins.yaml
xlsxreport/default_templates/: fragpipe.yaml  maxquant.yaml  msreport_lfq_protein.yaml
xlsxreport/scripts/: appdir.py  cassiopeia_report.py  cli.py  compile_excel.py  report.py  setup_appdata_dir.py  setup_appdir.py  validate.py
xlsxreport/template/: __init__.py  _repr.py  formats.py  section.py  sections.py  settings.py  template.py
