[project]
name = "xlsxreport"
description = "Automatic generation of formatted excel reports from MS results"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "David M. Hollenstein", email = "hollenstein.david@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
keywords = ["mass spectrometry", "proteomics", "report", "excel"]
requires-python = ">= 3.9"
dependencies = [
    "cerberus >= 1.3.5",
    "click >= 8.0.4",
    "numpy >= 1.21.5",
    "pandas >= 1.4.4",
    "platformdirs >= 3",
    "pyyaml >= 6.0",
    "xlsxwriter >= 3.1.2",
]
dynamic = ["version"]

[project.optional-dependencies]
tests = ["pytest >= 7.1.2", "openpyxl >= 3.0.10"]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "xlsxreport.__version__" }

[project.scripts]
xlsxreport_setup = "xlsxreport.scripts.setup_appdata_dir:cli"
xlsxreport = "xlsxreport.scripts.report:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
